2010-10-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/geanywraplabel.c:
   Fix build with GLib 2.8.


2010-10-06  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * po/kk.po:
   Added Kazakh translation. Thanks to Baurzhan Muftakhidinov for
   providing.


2010-10-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c, src/utils.h, src/highlighting.c, src/editor.c:
   Don't cache overridden lexer properties.
   Add foreach_strv() to plugin API.
   Add utils_strv_join().
 * tagmanager/basic.c:
   Parse property, constructor, destructor as functions (patch by
   pottersson, thanks - #2992167).


2010-10-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/tools.c, doc/geany.txt, doc/geany.html:
   Fix passing quoted arguments when using 'Send Selection to'. This
   means sed 's/\./(dot)/g' now works.
 * src/editor.c:
   Add snippet keybinding support for keys in user snippets.conf (based
   on patch by Eugene Arshinov, thanks). No docs yet.
 * doc/geany.txt, doc/geany.html:
   Add some subheadings for Snippets section.
 * doc/geany.txt, doc/geany.html:
   Add snippet keybindings docs.
 * src/highlighting.c, src/utils.h:
   Move foreach_strv to utils.h.
 * src/editor.c, data/snippets.conf:
   Read snippet keybindings from system keyfile also.
   Add keybinding example to default snippet.conf.


2010-09-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.h, src/filetypesprivate.h, src/filetypes.c,
   src/filetypes.h, src/document.c, doc/geany.txt, doc/geany.html,
   data/filetypes.txt2tags, data/filetypes.markdown,
   data/filetypes.restructuredtext:
   Add symbol_list_sort_mode per-filetype setting, set to sort by line
   number by default for Markdown, reStructuredText and Txt2Tags.
   Add utils_get_setting() macro for reading a key from a home or
   system keyfile.
   Move GeanyFiletypePrivate to filetypesprivate.h.
 * src/Makefile.am, src/ui_utils.c, configure.ac, wscript: