@@ -83,6 +83,7 @@ Daniel Marjamaki <danielm77(at)spray(dot)se> - Small improvements
 Jiří Techet <techet(at)gmail(dot)com> - Various patches
 Erik de Castro Lopo <mle+tools(at)mega-nerd(dot)com> - Various patches
 Thomas Huth <th(dot)huth(at)googlemail(dot)com> - Forth filetype
+Adam Ples <adamples(at)users(dot)sourceforge(dot)net> - Group encodings in open dialog
 
 Translators:
 ------------
