@@ -2,6 +2,9 @@
 
  * src/geanywraplabel.c:
    Fix build with GLib 2.8.
+ * src/dialogs.c, src/about.c, THANKS:
+   Group Open dialog encoding options by submenus (patch by Adam Ples,
+   thanks; #3047717).
 
 
 2010-10-06  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
@@ -19,7 +22,7 @@
    Add utils_strv_join().
  * tagmanager/basic.c:
    Parse property, constructor, destructor as functions (patch by
-   pottersson, thanks - #2992167).
+   pottersson, thanks; #2992167).
 
 
 2010-10-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
